--- a/complex_gui.ipynb
+++ b/complex_gui.ipynb
@@ -1,23 +1,9 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "source": [
-        "# Complex widget GUI\n",
-        "\n",
-        "This is representative of some of the more complex interfaces we've seen people build with widgets.  We've seen a few minor style/layout differences but otherwise it works fine in voila!"
-      ],
-      "metadata": {},
-      "id": "excess-large"
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "from ipywidgets import widgets, Layout\n",
-        "from IPython.display import clear_output"
-      ],
-      "outputs": [],
       "execution_count": 1,
+      "id": "automated-conference",
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-05-26T22:28:55.772Z",
@@ -26,13 +12,15 @@
           "shell.execute_reply": "2021-05-26T22:28:55.835Z"
         }
       },
-      "id": "automated-conference"
+      "outputs": [],
+      "source": [
+        "from ipywidgets import widgets, Layout\n",
+        "from IPython.display import clear_output"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![img](widgets.jpeg)"
-      ],
+      "id": "71326266-34f2-4738-b535-bf26c39d6a2b",
       "metadata": {
         "noteable": {
           "cell_type": "markdown"
@@ -43,10 +31,41 @@
           }
         }
       },
-      "id": "71326266-34f2-4738-b535-bf26c39d6a2b"
+      "source": [
+        "![img](widgets.jpeg)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "id": "anonymous-portuguese",
+      "metadata": {
+        "execution": {
+          "iopub.execute_input": "2021-06-11T17:09:36.556Z",
+          "iopub.status.busy": "2021-06-11T17:09:36.523Z",
+          "iopub.status.idle": "2021-06-11T17:09:37.094Z",
+          "shell.execute_reply": "2021-06-11T17:09:36.871Z"
+        },
+        "jupyter": {
+          "source_hidden": false
+        }
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e1511c4c387944129a71760b20e05f60",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "VBox(children=(HTML(value=\"<h2 style='text-align:center'>Widget GUI</h2>\"), Tab(children=(Tab(children=(VBox(c…"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "def callback(w):\n",
         "    with output:\n",
@@ -97,38 +116,11 @@
         "submit.on_click(callback)\n",
         "gui = widgets.VBox(children=[title, tabs, submit, output])\n",
         "gui"
-      ],
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e1511c4c387944129a71760b20e05f60",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": "VBox(children=(HTML(value=\"<h2 style='text-align:center'>Widget GUI</h2>\"), Tab(children=(Tab(children=(VBox(c…"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 8,
-      "metadata": {
-        "execution": {
-          "iopub.execute_input": "2021-06-11T17:09:36.556Z",
-          "iopub.status.busy": "2021-06-11T17:09:36.523Z",
-          "iopub.status.idle": "2021-06-11T17:09:37.094Z",
-          "shell.execute_reply": "2021-06-11T17:09:36.871Z"
-        },
-        "jupyter": {
-          "source_hidden": false
-        }
-      },
-      "id": "anonymous-portuguese"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "id": "9fb3bca1-c1d4-4699-a204-67e3a49e4682",
       "metadata": {
         "nteract": {
           "transient": {
@@ -136,7 +128,7 @@
           }
         }
       },
-      "id": "9fb3bca1-c1d4-4699-a204-67e3a49e4682"
+      "source": []
     }
   ],
   "metadata": {
