Commit from Noteable
Updating project file cache

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -364,9 +364,9 @@
   "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python3.6",
+      "display_name": "Project Kernel",
       "language": "python",
-      "name": "py36"
+      "name": "project_scoped_kernel"
     },
     "language_info": {
       "codemirror_mode": {
@@ -402,8 +402,11 @@
     "deepnote": {},
     "deepnote_execution_queue": [],
     "noteable": {
-      "last_transaction_id": "16a36908-f4b2-4df1-96bf-b99b5c1e24c9"
+      "last_transaction_id": "7a6bd69c-b52a-4ff9-a397-0e158eaea87d"
     },
-    "selected_hardware_size": "small"
+    "selected_hardware_size": "small",
+    "kernel_info": {
+      "name": "project_scoped_kernel"
+    }
   }
 }
