Commit from Noteable
Synced changes with remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -1,27 +1,6 @@
 {
   "cells": [
     {
-      "id": "cac55b7e-e6b7-4eea-a9d1-a668cd8a5552",
-      "cell_type": "code",
-      "metadata": {
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "69d9a213-559c-45db-8e8b-410aa12ea116"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-04-20T20:58:26.802184+00:00",
-          "start_time": "2023-04-20T20:58:26.629391+00:00"
-        }
-      },
-      "execution_count": null,
-      "source": "import emoji",
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": "### Challenge questions\n\nEasy questions:\n\n 1. How many total pings are in the Ocearch shark data?\n 2. How many unique species of sharks are in the data set?\n 3. What is the name, weight, and species of the heaviest shark(s)?\n 4. When and where was the very first ping?\n 5. Excluding results with 0 distance traveled: what's the minimum, average, and maximum travel distances?\n  ",
       "metadata": {
@@ -305,9 +284,9 @@
   "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "Project Kernel",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
-      "name": "project_scoped_kernel"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -343,11 +322,11 @@
     "deepnote": {},
     "deepnote_execution_queue": [],
     "noteable": {
-      "last_transaction_id": "7de62d5c-613d-4f83-a975-336b26fc1b29"
+      "last_transaction_id": "53d9e57c-25fd-4e20-b292-515c2df3af78"
     },
     "selected_hardware_size": "small",
     "kernel_info": {
-      "name": "project_scoped_kernel"
+      "name": "python3"
     }
   }
 }
