Commit from Noteable
Synced changes with remote storage (initialize kernel)

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -50,6 +50,27 @@
       "id": "b8455d57"
     },
     {
+      "id": "867c11a9-7f87-4a00-9579-53b57605fc39",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "1eba448b-23a0-4a66-8c9d-9d6cf3ddd428"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-04-25T19:13:02.558269+00:00",
+          "start_time": "2023-04-25T19:13:02.398987+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "2+3",
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": "### Explore data",
       "metadata": {
@@ -284,9 +305,9 @@
   "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
+      "display_name": "R",
+      "language": "R",
+      "name": "ir"
     },
     "language_info": {
       "codemirror_mode": {
@@ -322,11 +343,11 @@
     "deepnote": {},
     "deepnote_execution_queue": [],
     "noteable": {
-      "last_transaction_id": "53d9e57c-25fd-4e20-b292-515c2df3af78"
+      "last_transaction_id": "1e84d2e8-29b2-4700-b5fc-e7478e16fee0"
     },
     "selected_hardware_size": "small",
     "kernel_info": {
-      "name": "python3"
+      "name": "ir"
     }
   }
 }
