Commit from Noteable
Synced changes with remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -50,27 +50,6 @@
       "id": "b8455d57"
     },
     {
-      "id": "867c11a9-7f87-4a00-9579-53b57605fc39",
-      "cell_type": "code",
-      "metadata": {
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "1eba448b-23a0-4a66-8c9d-9d6cf3ddd428"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-04-25T19:13:02.558269+00:00",
-          "start_time": "2023-04-25T19:13:02.398987+00:00"
-        }
-      },
-      "execution_count": null,
-      "source": "2+3",
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": "### Explore data",
       "metadata": {
@@ -305,9 +284,9 @@
   "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "R",
-      "language": "R",
-      "name": "ir"
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -347,7 +326,7 @@
     },
     "selected_hardware_size": "small",
     "kernel_info": {
-      "name": "ir"
+      "name": "python3"
     }
   }
 }
