Commit from Noteable
Updating project file cache

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -21,6 +21,27 @@
       "id": "0bff3195"
     },
     {
+      "id": "8b75c3b3-0c50-4c68-bbfb-5f677a89594a",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "6728d69d-c6ab-41fa-8943-53be8a4cae6b"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-04-25T19:19:59.595545+00:00",
+          "start_time": "2023-04-25T19:19:59.034720+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "import emoji",
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": "# I have made changes\n\nimport pandas as pd\ndf = pd.read_csv('data/sharks_cleaned.csv')\ndf.shape",
       "metadata": {
@@ -284,9 +305,9 @@
   "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Project Kernel",
       "language": "python",
-      "name": "python3"
+      "name": "project_scoped_kernel"
     },
     "language_info": {
       "codemirror_mode": {
@@ -322,11 +343,11 @@
     "deepnote": {},
     "deepnote_execution_queue": [],
     "noteable": {
-      "last_transaction_id": "240c4463-31a2-4d0f-9b25-11f0dfe3d659"
+      "last_transaction_id": "1eca71aa-333d-47c4-a798-69b2c4e680b7"
     },
     "selected_hardware_size": "small",
     "kernel_info": {
-      "name": "python3"
+      "name": "project_scoped_kernel"
     }
   }
 }
