Commit from Noteable
Updating project file cache

--- a/3. Hard Challenge.ipynb
+++ b/3. Hard Challenge.ipynb
@@ -52,9 +52,63 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "noteable": {
+          "output_collection_id": "5c15d5a9-8355-4c25-b740-e2681fe0542e"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-04-25T19:23:52.957660+00:00",
+          "start_time": "2023-04-25T19:23:50.698652+00:00"
+        },
+        "datalink": {
+          "93b8783d-9a17-47e9-a9dd-d044bae766d7": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 65793,
+              "orig_size_bytes": 6316256,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 50000,
+              "truncated_size_bytes": 5200000,
+              "truncated_string_columns": []
+            },
+            "display_id": "93b8783d-9a17-47e9-a9dd-d044bae766d7",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-04-25T19:23:52.409057",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_1c8ddf4a7287455c8441480ae8aacd6f"
+          }
+        }
+      },
       "outputs": [],
-      "source": [],
+      "source": "pd.read_csv('data/sharks.csv')",
       "id": "b714eb74"
     },
     {
@@ -513,7 +567,7 @@
       "toc_window_display": true
     },
     "noteable": {
-      "last_transaction_id": "6e6d3277-1b6b-4c52-b14f-781afdc19844"
+      "last_transaction_id": "dead25c4-a059-425a-800d-9440c4cfab3a"
     },
     "selected_hardware_size": "small"
   },
