--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -25,8 +25,8 @@
       "source": "# I have made changes\n\nimport pandas as pd\ndf = pd.read_csv('data/sharks_cleaned.csv')\ndf.shape",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2019-02-23T02:46:10.055057Z",
-          "start_time": "2019-02-23T02:46:09.468245Z"
+          "end_time": "2023-10-04T14:14:26.444268+00:00",
+          "start_time": "2023-10-04T14:14:26.181864+00:00"
         },
         "cell_id": "00002-82dd9c2b-4b23-4615-9c97-a0608eaf9080",
         "deepnote_to_be_reexecuted": false,
@@ -34,19 +34,13 @@
         "execution_start": 1663879963898,
         "execution_millis": 995,
         "deepnote_cell_type": "code",
-        "deepnote_cell_height": 133
+        "deepnote_cell_height": 133,
+        "noteable": {
+          "output_collection_id": "82886ab9-7fb3-4859-ab3e-bc8c7d4dc665"
+        }
       },
       "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "execution_count": 1,
-          "data": {
-            "text/plain": "(65793, 12)"
-          },
-          "metadata": {}
-        }
-      ],
+      "outputs": [],
       "id": "b8455d57"
     },
     {
@@ -63,12 +57,15 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2019-02-23T02:46:10.087033Z",
-          "start_time": "2019-02-23T02:46:10.056044Z"
+          "end_time": "2023-10-04T14:14:26.640244+00:00",
+          "start_time": "2023-10-04T14:14:26.450237+00:00"
         },
         "cell_id": "00004-22518ac7-9822-412a-ab6f-1d6f5fb070b8",
         "deepnote_cell_type": "code",
-        "deepnote_cell_height": 61
+        "deepnote_cell_height": 61,
+        "noteable": {
+          "output_collection_id": "86f2aecb-0df8-4d2e-88c3-50a29ba519e7"
+        }
       },
       "source": "df.info()",
       "execution_count": null,
@@ -79,12 +76,61 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2019-02-23T02:46:10.182142Z",
-          "start_time": "2019-02-23T02:46:10.088035Z"
+          "end_time": "2023-10-04T14:14:27.032915+00:00",
+          "start_time": "2023-10-04T14:14:26.646470+00:00"
         },
         "cell_id": "00005-721b63b4-5f38-4cb7-b565-131446b59929",
         "deepnote_cell_type": "code",
-        "deepnote_cell_height": 61
+        "deepnote_cell_height": 61,
+        "noteable": {
+          "output_collection_id": "c19f9673-517d-4bf0-a10c-e6dc9ac0894a"
+        },
+        "datalink": {
+          "0cb4ad21-e605-4cf5-a692-5d7fa7138f7e": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 7,
+              "orig_num_rows": 8,
+              "orig_size_bytes": 512,
+              "truncated_num_cols": 7,
+              "truncated_num_rows": 8,
+              "truncated_size_bytes": 512,
+              "truncated_string_columns": []
+            },
+            "display_id": "0cb4ad21-e605-4cf5-a692-5d7fa7138f7e",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T14:14:26.868687",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_151be7d184ea441e81635d1afdee688c"
+          }
+        }
       },
       "source": "df.describe()",
       "execution_count": null,
@@ -95,12 +141,61 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2019-02-23T02:46:10.247241Z",
-          "start_time": "2019-02-23T02:46:10.184157Z"
+          "end_time": "2023-10-04T14:14:27.551070+00:00",
+          "start_time": "2023-10-04T14:14:27.147789+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
-        "deepnote_cell_height": 61
+        "deepnote_cell_height": 61,
+        "noteable": {
+          "output_collection_id": "c0fa1e54-5035-44d2-a42b-fc733383ede1"
+        },
+        "datalink": {
+          "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 520,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 520,
+              "truncated_string_columns": []
+            },
+            "display_id": "4182fedd-5188-40cf-99a8-35e499d2b1c7",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T14:14:27.383350",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_ed6903096242430aa640f2ede78b89d9"
+          }
+        }
       },
       "source": "df.head()",
       "execution_count": null,
