--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -141,14 +141,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T14:14:27.551070+00:00",
-          "start_time": "2023-10-04T14:14:27.147789+00:00"
+          "end_time": "2023-10-04T14:15:08.109085+00:00",
+          "start_time": "2023-10-04T14:15:07.352807+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "c0fa1e54-5035-44d2-a42b-fc733383ede1"
+          "output_collection_id": "fa40c66e-4838-4210-8fe8-4ac5b173990f"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -194,10 +194,405 @@
             "sampling_time": "2023-10-04T14:14:27.383350",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_ed6903096242430aa640f2ede78b89d9"
+          },
+          "c6bd2c82-dc57-4fec-a2d8-97a32b9992ff": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 65793,
+              "orig_size_bytes": 6842472,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 50000,
+              "truncated_size_bytes": 5200000,
+              "truncated_string_columns": []
+            },
+            "display_id": "c6bd2c82-dc57-4fec-a2d8-97a32b9992ff",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T14:14:55.427585",
+            "user_variable_name": "df",
+            "variable_name": "df"
+          },
+          "181e3c71-6636-4d7a-b1d6-2c6def5f12d9": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 1000,
+              "orig_size_bytes": 104000,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 1000,
+              "truncated_size_bytes": 104000,
+              "truncated_string_columns": []
+            },
+            "display_id": "181e3c71-6636-4d7a-b1d6-2c6def5f12d9",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T14:15:07.937726",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_563a1fd38fd6439ba3f58e64adbd006e"
           }
+        },
+        "dx": {
+          "dashboard": {
+            "multiViews": []
+          },
+          "fieldMetadata": {},
+          "updated": 1696428912027,
+          "views": [
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "empty",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "New View"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "2ed0df7c-0d5c-411e-82de-db527c688be6",
+              "isDefault": false,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {
+                "facets": [
+                  {
+                    "chartMode": "bar",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Albertina ": "#b3331d",
+                            "Brenda ": "#b86117",
+                            "Helen ": "#b6a756",
+                            "Oprah": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "name",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "barProjection": "vertical",
+                      "combinationMode": "AVG",
+                      "dim1": "name",
+                      "labelType": "none",
+                      "metric1": "longitude",
+                      "metric3": "none",
+                      "proBarMode": "Combined",
+                      "secondBarMetric": "length"
+                    },
+                    "name": "bar",
+                    "title": "Combined Bar Chart"
+                  },
+                  {
+                    "chartMode": "scatter",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Albertina ": "#b3331d",
+                            "Brenda ": "#b86117",
+                            "Helen ": "#b6a756",
+                            "Oprah": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "name",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "confoColor": "name",
+                      "metric1": "longitude",
+                      "metric2": "length",
+                      "scatterplotSize": "none"
+                    },
+                    "name": "scatter",
+                    "title": "Scatterplot"
+                  },
+                  {
+                    "chartMode": "network",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Female": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "gender",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "dim1": "gender",
+                      "dim2": "species",
+                      "edgeMode": "edge list",
+                      "metric1": "latitude",
+                      "networkLabel": "scaled",
+                      "networkType": "sankey"
+                    },
+                    "name": "network",
+                    "title": "Sankey Network"
+                  },
+                  {
+                    "chartMode": "summary",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "7 March 2012": "#122753",
+                            "8 March 2012": "#b3331d"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "tagDate",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "boxplotOutliers": true,
+                      "dim1": "tagDate",
+                      "metric1": "dist_total",
+                      "summaryType": "boxplot"
+                    },
+                    "name": "summary",
+                    "title": "Boxplot w/ Outliers"
+                  },
+                  {
+                    "chartMode": "hierarchy",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "7 March 2012": "#122753",
+                            "8 March 2012": "#b3331d"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "tagDate",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "hierarchyType": "treemap",
+                      "metric1": "dist_total",
+                      "networkLabel": "scaled",
+                      "selectedDimensions": [
+                        "tagDate"
+                      ]
+                    },
+                    "name": "hierarchy",
+                    "title": "Treemap"
+                  },
+                  {
+                    "chartMode": "bar",
+                    "confoRules": [],
+                    "faceting": {
+                      "barProjection": "vertical",
+                      "combinationMode": "AVG",
+                      "dim1": "datetime",
+                      "groupOther": true,
+                      "labelType": "none",
+                      "metric1": "weight",
+                      "proBarMode": "Combined",
+                      "secondBarMetric": "none",
+                      "sortColumnsBy": "desc-val"
+                    },
+                    "name": "bar",
+                    "title": "Long Tail Bar Chart"
+                  },
+                  {
+                    "chartMode": "wordcloud",
+                    "confoRules": [],
+                    "faceting": {
+                      "textDataFormat": "token",
+                      "tokenMetric": "weight",
+                      "wordColor": "random",
+                      "wordData": "datetime"
+                    },
+                    "name": "wordcloud",
+                    "title": "Token Cloud"
+                  },
+                  {
+                    "chartMode": "pie",
+                    "confoRules": [
+                      {
+                        "colorOpts": {
+                          "color": null,
+                          "colorsHash": {
+                            "Albertina ": "#b3331d",
+                            "Brenda ": "#b86117",
+                            "Helen ": "#b6a756",
+                            "Oprah": "#122753"
+                          },
+                          "cond": null,
+                          "gradient": null,
+                          "max": "",
+                          "min": "",
+                          "mode": "categorical",
+                          "scale": null,
+                          "thresholdColors": null,
+                          "thresholdValues": null
+                        },
+                        "columnType": "Dimension",
+                        "fieldName": "name",
+                        "id": "data-prism",
+                        "index": 0,
+                        "name": ""
+                      }
+                    ],
+                    "faceting": {
+                      "combinationMode": "SUM",
+                      "dim1": "name",
+                      "labelType": "none",
+                      "metric1": "id",
+                      "proBarMode": "Combined",
+                      "showTotal": true
+                    },
+                    "name": "pie",
+                    "title": "Donut Chart"
+                  }
+                ]
+              },
+              "chartMode": "empty",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "New View"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "2ed0df7c-0d5c-411e-82de-db527c688be6",
+              "isDefault": false,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            }
+          ]
         }
       },
-      "source": "df.head()",
+      "source": "df.head(1000)",
       "execution_count": null,
       "outputs": [],
       "id": "05d5a01a"
