Commit from Noteable
Pulled project file from remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -289,7 +289,7 @@
             "multiViews": []
           },
           "fieldMetadata": {},
-          "updated": 1696428912027,
+          "updated": 1696428935063,
           "views": [
             {
               "annotationRules": [],
@@ -314,265 +314,43 @@
             {
               "annotationRules": [],
               "chart": {
-                "facets": [
-                  {
-                    "chartMode": "bar",
-                    "confoRules": [
-                      {
-                        "colorOpts": {
-                          "color": null,
-                          "colorsHash": {
-                            "Albertina ": "#b3331d",
-                            "Brenda ": "#b86117",
-                            "Helen ": "#b6a756",
-                            "Oprah": "#122753"
-                          },
-                          "cond": null,
-                          "gradient": null,
-                          "max": "",
-                          "min": "",
-                          "mode": "categorical",
-                          "scale": null,
-                          "thresholdColors": null,
-                          "thresholdValues": null
-                        },
-                        "columnType": "Dimension",
-                        "fieldName": "name",
-                        "id": "data-prism",
-                        "index": 0,
-                        "name": ""
-                      }
-                    ],
-                    "faceting": {
-                      "barProjection": "vertical",
-                      "combinationMode": "AVG",
-                      "dim1": "name",
-                      "labelType": "none",
-                      "metric1": "longitude",
-                      "metric3": "none",
-                      "proBarMode": "Combined",
-                      "secondBarMetric": "length"
-                    },
-                    "name": "bar",
-                    "title": "Combined Bar Chart"
-                  },
-                  {
-                    "chartMode": "scatter",
-                    "confoRules": [
-                      {
-                        "colorOpts": {
-                          "color": null,
-                          "colorsHash": {
-                            "Albertina ": "#b3331d",
-                            "Brenda ": "#b86117",
-                            "Helen ": "#b6a756",
-                            "Oprah": "#122753"
-                          },
-                          "cond": null,
-                          "gradient": null,
-                          "max": "",
-                          "min": "",
-                          "mode": "categorical",
-                          "scale": null,
-                          "thresholdColors": null,
-                          "thresholdValues": null
-                        },
-                        "columnType": "Dimension",
-                        "fieldName": "name",
-                        "id": "data-prism",
-                        "index": 0,
-                        "name": ""
-                      }
-                    ],
-                    "faceting": {
-                      "confoColor": "name",
-                      "metric1": "longitude",
-                      "metric2": "length",
-                      "scatterplotSize": "none"
-                    },
-                    "name": "scatter",
-                    "title": "Scatterplot"
-                  },
-                  {
-                    "chartMode": "network",
-                    "confoRules": [
-                      {
-                        "colorOpts": {
-                          "color": null,
-                          "colorsHash": {
-                            "Female": "#122753"
-                          },
-                          "cond": null,
-                          "gradient": null,
-                          "max": "",
-                          "min": "",
-                          "mode": "categorical",
-                          "scale": null,
-                          "thresholdColors": null,
-                          "thresholdValues": null
-                        },
-                        "columnType": "Dimension",
-                        "fieldName": "gender",
-                        "id": "data-prism",
-                        "index": 0,
-                        "name": ""
-                      }
-                    ],
-                    "faceting": {
-                      "dim1": "gender",
-                      "dim2": "species",
-                      "edgeMode": "edge list",
-                      "metric1": "latitude",
-                      "networkLabel": "scaled",
-                      "networkType": "sankey"
-                    },
-                    "name": "network",
-                    "title": "Sankey Network"
-                  },
-                  {
-                    "chartMode": "summary",
-                    "confoRules": [
-                      {
-                        "colorOpts": {
-                          "color": null,
-                          "colorsHash": {
-                            "7 March 2012": "#122753",
-                            "8 March 2012": "#b3331d"
-                          },
-                          "cond": null,
-                          "gradient": null,
-                          "max": "",
-                          "min": "",
-                          "mode": "categorical",
-                          "scale": null,
-                          "thresholdColors": null,
-                          "thresholdValues": null
-                        },
-                        "columnType": "Dimension",
-                        "fieldName": "tagDate",
-                        "id": "data-prism",
-                        "index": 0,
-                        "name": ""
-                      }
-                    ],
-                    "faceting": {
-                      "boxplotOutliers": true,
-                      "dim1": "tagDate",
-                      "metric1": "dist_total",
-                      "summaryType": "boxplot"
-                    },
-                    "name": "summary",
-                    "title": "Boxplot w/ Outliers"
-                  },
-                  {
-                    "chartMode": "hierarchy",
-                    "confoRules": [
-                      {
-                        "colorOpts": {
-                          "color": null,
-                          "colorsHash": {
-                            "7 March 2012": "#122753",
-                            "8 March 2012": "#b3331d"
-                          },
-                          "cond": null,
-                          "gradient": null,
-                          "max": "",
-                          "min": "",
-                          "mode": "categorical",
-                          "scale": null,
-                          "thresholdColors": null,
-                          "thresholdValues": null
-                        },
-                        "columnType": "Dimension",
-                        "fieldName": "tagDate",
-                        "id": "data-prism",
-                        "index": 0,
-                        "name": ""
-                      }
-                    ],
-                    "faceting": {
-                      "hierarchyType": "treemap",
-                      "metric1": "dist_total",
-                      "networkLabel": "scaled",
-                      "selectedDimensions": [
-                        "tagDate"
-                      ]
-                    },
-                    "name": "hierarchy",
-                    "title": "Treemap"
-                  },
-                  {
-                    "chartMode": "bar",
-                    "confoRules": [],
-                    "faceting": {
-                      "barProjection": "vertical",
-                      "combinationMode": "AVG",
-                      "dim1": "datetime",
-                      "groupOther": true,
-                      "labelType": "none",
-                      "metric1": "weight",
-                      "proBarMode": "Combined",
-                      "secondBarMetric": "none",
-                      "sortColumnsBy": "desc-val"
-                    },
-                    "name": "bar",
-                    "title": "Long Tail Bar Chart"
-                  },
-                  {
-                    "chartMode": "wordcloud",
-                    "confoRules": [],
-                    "faceting": {
-                      "textDataFormat": "token",
-                      "tokenMetric": "weight",
-                      "wordColor": "random",
-                      "wordData": "datetime"
-                    },
-                    "name": "wordcloud",
-                    "title": "Token Cloud"
-                  },
-                  {
-                    "chartMode": "pie",
-                    "confoRules": [
-                      {
-                        "colorOpts": {
-                          "color": null,
-                          "colorsHash": {
-                            "Albertina ": "#b3331d",
-                            "Brenda ": "#b86117",
-                            "Helen ": "#b6a756",
-                            "Oprah": "#122753"
-                          },
-                          "cond": null,
-                          "gradient": null,
-                          "max": "",
-                          "min": "",
-                          "mode": "categorical",
-                          "scale": null,
-                          "thresholdColors": null,
-                          "thresholdValues": null
-                        },
-                        "columnType": "Dimension",
-                        "fieldName": "name",
-                        "id": "data-prism",
-                        "index": 0,
-                        "name": ""
-                      }
-                    ],
-                    "faceting": {
-                      "combinationMode": "SUM",
-                      "dim1": "name",
-                      "labelType": "none",
-                      "metric1": "id",
-                      "proBarMode": "Combined",
-                      "showTotal": true
-                    },
-                    "name": "pie",
-                    "title": "Donut Chart"
-                  }
-                ]
+                "barProjection": "vertical",
+                "combinationMode": "AVG",
+                "dim1": "name",
+                "facets": [],
+                "labelType": "none",
+                "metric1": "weight",
+                "metric3": "none",
+                "proBarMode": "Combined",
+                "secondBarMetric": "length"
               },
-              "chartMode": "empty",
-              "confoRules": [],
+              "chartMode": "bar",
+              "confoRules": [
+                {
+                  "colorOpts": {
+                    "color": null,
+                    "colorsHash": {
+                      "Albertina ": "#b3331d",
+                      "Brenda ": "#b86117",
+                      "Helen ": "#b6a756",
+                      "Oprah": "#122753"
+                    },
+                    "cond": null,
+                    "gradient": null,
+                    "max": "",
+                    "min": "",
+                    "mode": "categorical",
+                    "scale": null,
+                    "thresholdColors": null,
+                    "thresholdValues": null
+                  },
+                  "columnType": "Dimension",
+                  "fieldName": "name",
+                  "id": "data-prism",
+                  "index": 0,
+                  "name": ""
+                }
+              ],
               "decoration": {
                 "footer": "",
                 "subtitle": "",
