Commit from Noteable
Synced changes with remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -141,14 +141,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T14:15:08.109085+00:00",
-          "start_time": "2023-10-04T14:15:07.352807+00:00"
+          "end_time": "2023-10-04T14:17:38.824413+00:00",
+          "start_time": "2023-10-04T14:17:38.034495+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "fa40c66e-4838-4210-8fe8-4ac5b173990f"
+          "output_collection_id": "8a257c7e-4e8e-4673-8f33-0a5c257a75d7"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -282,6 +282,50 @@
             "sampling_time": "2023-10-04T14:15:07.937726",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_563a1fd38fd6439ba3f58e64adbd006e"
+          },
+          "71a9a2e3-9a83-4d5f-9cce-4967c845b431": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 520,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 520,
+              "truncated_string_columns": []
+            },
+            "display_id": "71a9a2e3-9a83-4d5f-9cce-4967c845b431",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T14:17:38.655458",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_81923aa20f9b4da785d3d78e309b8474"
           }
         },
         "dx": {
@@ -370,7 +414,7 @@
           ]
         }
       },
-      "source": "df.head(1000)",
+      "source": "df.head(5)",
       "execution_count": null,
       "outputs": [],
       "id": "05d5a01a"
