--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -25,8 +25,8 @@
       "source": "# I have made changes\n\nimport pandas as pd\ndf = pd.read_csv('data/sharks_cleaned.csv')\ndf.shape",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T14:14:26.444268+00:00",
-          "start_time": "2023-10-04T14:14:26.181864+00:00"
+          "end_time": "2023-10-04T15:48:19.958391+00:00",
+          "start_time": "2023-10-04T15:48:19.726666+00:00"
         },
         "cell_id": "00002-82dd9c2b-4b23-4615-9c97-a0608eaf9080",
         "deepnote_to_be_reexecuted": false,
@@ -36,7 +36,7 @@
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 133,
         "noteable": {
-          "output_collection_id": "82886ab9-7fb3-4859-ab3e-bc8c7d4dc665"
+          "output_collection_id": "999a3423-03b7-4322-901c-18389b3707f7"
         }
       },
       "execution_count": 1,
@@ -57,14 +57,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T14:14:26.640244+00:00",
-          "start_time": "2023-10-04T14:14:26.450237+00:00"
+          "end_time": "2023-10-04T15:48:20.299562+00:00",
+          "start_time": "2023-10-04T15:48:20.116413+00:00"
         },
         "cell_id": "00004-22518ac7-9822-412a-ab6f-1d6f5fb070b8",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "86f2aecb-0df8-4d2e-88c3-50a29ba519e7"
+          "output_collection_id": "8f7f2d7c-204a-4298-a2dd-210d46796fe8"
         }
       },
       "source": "df.info()",
@@ -76,14 +76,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T14:14:27.032915+00:00",
-          "start_time": "2023-10-04T14:14:26.646470+00:00"
+          "end_time": "2023-10-04T15:48:20.664076+00:00",
+          "start_time": "2023-10-04T15:48:20.306508+00:00"
         },
         "cell_id": "00005-721b63b4-5f38-4cb7-b565-131446b59929",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "c19f9673-517d-4bf0-a10c-e6dc9ac0894a"
+          "output_collection_id": "ab9052f8-5dce-4666-a452-34a3cf007f25"
         },
         "datalink": {
           "0cb4ad21-e605-4cf5-a692-5d7fa7138f7e": {
@@ -129,6 +129,94 @@
             "sampling_time": "2023-10-04T14:14:26.868687",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_151be7d184ea441e81635d1afdee688c"
+          },
+          "65725931-d9c9-4c3c-82b2-e1c0c2098e86": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 7,
+              "orig_num_rows": 8,
+              "orig_size_bytes": 512,
+              "truncated_num_cols": 7,
+              "truncated_num_rows": 8,
+              "truncated_size_bytes": 512,
+              "truncated_string_columns": []
+            },
+            "display_id": "65725931-d9c9-4c3c-82b2-e1c0c2098e86",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T15:48:19.143433",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_5bb9c0989bea4a6aa4ece4ef6c8cf0b9"
+          },
+          "2fcfa8c1-8cb7-46b8-8714-ec66953173fd": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 7,
+              "orig_num_rows": 8,
+              "orig_size_bytes": 512,
+              "truncated_num_cols": 7,
+              "truncated_num_rows": 8,
+              "truncated_size_bytes": 512,
+              "truncated_string_columns": []
+            },
+            "display_id": "2fcfa8c1-8cb7-46b8-8714-ec66953173fd",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T15:48:20.501367",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_11cfb4ea65d54627b8eaed3931ba3dc5"
           }
         }
       },
@@ -141,14 +229,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T14:17:38.824413+00:00",
-          "start_time": "2023-10-04T14:17:38.034495+00:00"
+          "end_time": "2023-10-04T15:48:21.029601+00:00",
+          "start_time": "2023-10-04T15:48:20.670502+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "8a257c7e-4e8e-4673-8f33-0a5c257a75d7"
+          "output_collection_id": "ebbf197a-2cb2-4375-96ea-855c09ded832"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -326,6 +414,94 @@
             "sampling_time": "2023-10-04T14:17:38.655458",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_81923aa20f9b4da785d3d78e309b8474"
+          },
+          "2ff03e4c-a600-46a9-9eb6-c92fc9bf8d08": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 520,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 520,
+              "truncated_string_columns": []
+            },
+            "display_id": "2ff03e4c-a600-46a9-9eb6-c92fc9bf8d08",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T15:48:19.509097",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_676abbcc35c748039eda32767cc89be4"
+          },
+          "6053c8c6-4ca5-49b4-98d8-5a6c6facb04a": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 520,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 520,
+              "truncated_string_columns": []
+            },
+            "display_id": "6053c8c6-4ca5-49b4-98d8-5a6c6facb04a",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T15:48:20.869343",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_7b362d9ff4ff4ca2818e8aceb005e0fe"
           }
         },
         "dx": {
@@ -596,9 +772,9 @@
   "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "Project Kernel",
+      "display_name": "Python 3.9",
       "language": "python",
-      "name": "project_scoped_kernel"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -638,7 +814,7 @@
     },
     "selected_hardware_size": "small",
     "kernel_info": {
-      "name": "project_scoped_kernel"
+      "name": "python3"
     }
   }
 }
