Commit from Noteable
Pulled project file from remote storage

--- a/1. Easy Challenge.ipynb
+++ b/1. Easy Challenge.ipynb
@@ -25,8 +25,8 @@
       "source": "# I have made changes\n\nimport pandas as pd\ndf = pd.read_csv('data/sharks_cleaned.csv')\ndf.shape",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:48:19.958391+00:00",
-          "start_time": "2023-10-04T15:48:19.726666+00:00"
+          "end_time": "2023-10-04T15:54:41.007938+00:00",
+          "start_time": "2023-10-04T15:54:40.777186+00:00"
         },
         "cell_id": "00002-82dd9c2b-4b23-4615-9c97-a0608eaf9080",
         "deepnote_to_be_reexecuted": false,
@@ -36,7 +36,7 @@
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 133,
         "noteable": {
-          "output_collection_id": "999a3423-03b7-4322-901c-18389b3707f7"
+          "output_collection_id": "e87d5b7d-8847-4342-96ce-4115b9fedd0c"
         }
       },
       "execution_count": 1,
@@ -57,14 +57,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:48:20.299562+00:00",
-          "start_time": "2023-10-04T15:48:20.116413+00:00"
+          "end_time": "2023-10-04T15:54:41.196338+00:00",
+          "start_time": "2023-10-04T15:54:41.012984+00:00"
         },
         "cell_id": "00004-22518ac7-9822-412a-ab6f-1d6f5fb070b8",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "8f7f2d7c-204a-4298-a2dd-210d46796fe8"
+          "output_collection_id": "6a6f2d05-91ac-4ffc-8fe7-ca1e0d654286"
         }
       },
       "source": "df.info()",
@@ -76,14 +76,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:48:20.664076+00:00",
-          "start_time": "2023-10-04T15:48:20.306508+00:00"
+          "end_time": "2023-10-04T15:54:41.546626+00:00",
+          "start_time": "2023-10-04T15:54:41.201258+00:00"
         },
         "cell_id": "00005-721b63b4-5f38-4cb7-b565-131446b59929",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "ab9052f8-5dce-4666-a452-34a3cf007f25"
+          "output_collection_id": "2bd831df-be13-4ee9-b1b6-957072fe794b"
         },
         "datalink": {
           "0cb4ad21-e605-4cf5-a692-5d7fa7138f7e": {
@@ -217,6 +217,50 @@
             "sampling_time": "2023-10-04T15:48:20.501367",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_11cfb4ea65d54627b8eaed3931ba3dc5"
+          },
+          "1cab221b-62cc-4f86-a9c0-ee53ff05c60b": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 7,
+              "orig_num_rows": 8,
+              "orig_size_bytes": 512,
+              "truncated_num_cols": 7,
+              "truncated_num_rows": 8,
+              "truncated_size_bytes": 512,
+              "truncated_string_columns": []
+            },
+            "display_id": "1cab221b-62cc-4f86-a9c0-ee53ff05c60b",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T15:54:41.384553",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_206cf6c86692462d9b85730280481114"
           }
         }
       },
@@ -229,14 +273,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2023-10-04T15:48:21.029601+00:00",
-          "start_time": "2023-10-04T15:48:20.670502+00:00"
+          "end_time": "2023-10-04T15:54:41.892698+00:00",
+          "start_time": "2023-10-04T15:54:41.551483+00:00"
         },
         "cell_id": "00006-9934f210-ecf4-4c0c-8035-d1067b39157f",
         "deepnote_cell_type": "code",
         "deepnote_cell_height": 61,
         "noteable": {
-          "output_collection_id": "ebbf197a-2cb2-4375-96ea-855c09ded832"
+          "output_collection_id": "49ff4dc5-730d-4a1b-b8dd-18c56f52adc2"
         },
         "datalink": {
           "4182fedd-5188-40cf-99a8-35e499d2b1c7": {
@@ -502,6 +546,50 @@
             "sampling_time": "2023-10-04T15:48:20.869343",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_7b362d9ff4ff4ca2818e8aceb005e0fe"
+          },
+          "f4f446ef-dbca-4f76-a44d-4aba00f09d05": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 12,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 520,
+              "truncated_num_cols": 12,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 520,
+              "truncated_string_columns": []
+            },
+            "display_id": "f4f446ef-dbca-4f76-a44d-4aba00f09d05",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-10-04T15:54:41.732317",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_70d5fd265668450dbfe7245bf5a33f7a"
           }
         },
         "dx": {
@@ -509,17 +597,19 @@
             "multiViews": []
           },
           "fieldMetadata": {},
-          "updated": 1696428935063,
+          "updated": 1696434891954,
           "views": [
             {
               "annotationRules": [],
-              "chart": {},
-              "chartMode": "empty",
+              "chart": {
+                "facets": []
+              },
+              "chartMode": "grid",
               "confoRules": [],
               "decoration": {
                 "footer": "",
                 "subtitle": "",
-                "title": "New View"
+                "title": "Table"
               },
               "facets": [],
               "filterSettings": {
@@ -527,63 +617,9 @@
                 "filters": []
               },
               "id": "2ed0df7c-0d5c-411e-82de-db527c688be6",
+              "isComment": false,
               "isDefault": false,
-              "type": "public",
-              "userID": ""
-            },
-            {
-              "annotationRules": [],
-              "chart": {
-                "barProjection": "vertical",
-                "combinationMode": "AVG",
-                "dim1": "name",
-                "facets": [],
-                "labelType": "none",
-                "metric1": "weight",
-                "metric3": "none",
-                "proBarMode": "Combined",
-                "secondBarMetric": "length"
-              },
-              "chartMode": "bar",
-              "confoRules": [
-                {
-                  "colorOpts": {
-                    "color": null,
-                    "colorsHash": {
-                      "Albertina ": "#b3331d",
-                      "Brenda ": "#b86117",
-                      "Helen ": "#b6a756",
-                      "Oprah": "#122753"
-                    },
-                    "cond": null,
-                    "gradient": null,
-                    "max": "",
-                    "min": "",
-                    "mode": "categorical",
-                    "scale": null,
-                    "thresholdColors": null,
-                    "thresholdValues": null
-                  },
-                  "columnType": "Dimension",
-                  "fieldName": "name",
-                  "id": "data-prism",
-                  "index": 0,
-                  "name": ""
-                }
-              ],
-              "decoration": {
-                "footer": "",
-                "subtitle": "",
-                "title": "New View"
-              },
-              "facets": [],
-              "filterSettings": {
-                "SHOW_FILTER_PANEL": true,
-                "filters": []
-              },
-              "id": "2ed0df7c-0d5c-411e-82de-db527c688be6",
-              "isDefault": false,
-              "isTransitory": true,
+              "isTransitory": false,
               "type": "public",
               "userID": ""
             }
